--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .App-logo {
@@ -38,7 +38,19 @@
   }
 }
 
+/* Containers */
 #landing-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.125fr repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  place-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+#forgotPassword-container {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 0.125fr 1fr;
@@ -58,8 +70,9 @@
   height: 100vh;
   width: 100vw;
   place-items: center;
+  overflow: hidden;
 }
-
+/* Navbar */
 .navBar {
   background-color: #61dafb;
   height: 100%;
@@ -104,6 +117,7 @@
   color: black;
   display: block;
   margin-right: auto;
+  font-family: "PT Sans", sans-serif;
 }
 
 .list-span {
@@ -124,20 +138,27 @@
 
 .logo {
   grid-area: 1 / 1 / 2 / 2;
+  font-family: "Yellowtail", cursive;
+  font-size: 20px;
+  text-align: left;
 }
+
+.logo h1 {
+  margin-left: 15%;
+  transition: ease-in-out 1s;
+}
+.logo h1:hover {
+  color: white;
+  transition: ease-in-out 0.5s;
+  cursor: pointer;
+}
+
 .otherPages {
   grid-area: 1 / 2 / 2 / 3;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-right: 20px;
-}
-
-.mainBody {
-  grid-area: 2 / 1 / 3 / 2;
-  background-color: blanchedalmond;
-  height: 100%;
-  width: 100vw;
 }
 
 .rodal-text-container {
@@ -155,6 +176,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  font-family: "PT Sans", sans-serif;
 }
 
 #login-box,
@@ -235,11 +257,29 @@
   height: 0;
   text-align: left;
   margin-left: 5%;
+  font-family: "Yellowtail", cursive;
+  font-size: 40px;
+  transition: ease-in-out 0.5s;
+}
+.login-top-h1:hover,
+.ca-top-h1:hover {
+  color: #61dafb;
+  transition: ease-in-out 0.5s;
+  cursor: pointer;
 }
 
-.login-inputs,
-.ca-inputs {
+.login-inputs {
   height: 20%;
+  width: 55%;
+  border: 2px solid black;
+  margin-bottom: 5px;
+  margin-top: 0;
+  transition: ease-in-out 0.4s;
+  text-align: center;
+  font-family: "PT Sans", sans-serif;
+}
+.ca-inputs {
+  height: 18%;
   width: 55%;
   border: 2px solid black;
   margin-bottom: 5px;
@@ -261,30 +301,39 @@
 .forgot-password {
   font-size: 14px;
   font-family: "PT Sans", sans-serif;
+  transition: ease-in-out 0.5s;
 }
 .forgot-password:hover {
   cursor: pointer;
+  font-size: 16px;
+  transition: ease-in-out 0.5s;
 }
 
 .login-btn,
-.login-ca-btn,
-.ca-btn,
-.signin-btn {
+.login-ca-btn {
   margin-top: 3%;
   height: 28%;
   width: 56%;
-  background: rgb(14, 0, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(14, 0, 255, 1) 0%,
-    rgba(0, 237, 255, 1) 54%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background-color: #61dafb;
   font-family: "PT Sans", sans-serif;
 
   border: 2px solid black;
   transition: ease-in-out 0.4s;
   cursor: pointer;
+  font-size: 16px;
+}
+
+.ca-btn,
+.signin-btn {
+  margin-top: 3%;
+  height: 38%;
+  width: 56%;
+  background-color: #61dafb;
+  font-family: "PT Sans", sans-serif;
+  border: 2px solid black;
+  transition: ease-in-out 0.4s;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 .g-btn-comp {
@@ -301,6 +350,7 @@
   margin-left: 22%;
   margin-top: 8%;
   font-family: "PT Sans", sans-serif;
+  font-size: 16px;
 }
 
 .g-btn-comp:hover,
@@ -317,4 +367,253 @@
 
 .g-btn-text {
   margin-right: 33%;
+}
+
+.login-rodal-container,
+.ca-rodal-container {
+  margin-top: 15%;
+}
+
+.login-rodal-text .ca-rodal-text {
+  font-size: 20px;
+  font-family: "PT Sans", sans-serif;
+}
+
+/* Forgot Password page CSSS */
+
+#forgot-box {
+  position: absolute;
+  top: 25%;
+  height: 45%;
+  width: 40%;
+  border: black 3px solid;
+  border-radius: 20px;
+  font-family: "PT Sans", sans-serif;
+  box-shadow: -9px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -9px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -9px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.forgot-input {
+  margin-top: 7%;
+  height: 10%;
+  width: 50%;
+  transition: ease-out 0.4s;
+  font-family: "PT Sans", sans-serif;
+  text-align: center;
+  border: 2px solid black;
+}
+.forgot-button {
+  margin-top: 5%;
+  height: 12%;
+  width: 51%;
+  transition: ease-out 0.4s;
+  font-family: "PT Sans", sans-serif;
+  text-align: center;
+  border: 2px solid black;
+  background-color: white;
+}
+
+.forgot-input:hover,
+.forgot-button:hover {
+  border-radius: 30px;
+  transition: ease-in 0.4s;
+  cursor: pointer;
+}
+
+/* Landing Page */
+
+.landing-navbar-container {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.landing-logo {
+  font-family: "Yellowtail", "cursive";
+  font-size: 80px;
+  text-decoration: none;
+  margin-top: 12vh;
+  width: 10px;
+  text-align: center;
+  color: black;
+}
+.landing-logo:hover {
+  color: #61dafb;
+  transition: ease-in-out 0.5s;
+  cursor: pointer;
+}
+
+.landing-logo-slogan {
+  margin: 0 auto;
+  font-family: "PT Sans", sans-serif;
+  top: 0;
+  margin-bottom: 7vh;
+  font-size: 30px;
+}
+
+.landing-search-input {
+  margin: 0 auto;
+  height: 80%;
+  width: 48%;
+  font-family: "PT Sans", sans-serif;
+}
+
+.landing-search-input:focus {
+  outline: none;
+}
+
+.landing-search-button {
+  margin: 0 auto;
+  height: 100%;
+  width: 4%;
+  border: none;
+}
+
+.landing-search-button:hover {
+  cursor: pointer;
+}
+
+.down-circle {
+  display: flex;
+  height: 60px;
+  width: 60px;
+  border-radius: 100%;
+  background-color: #61dafb;
+  place-self: end;
+  margin-right: 3%;
+  margin-bottom: 2%;
+}
+
+.down-circle:hover {
+  cursor: pointer;
+}
+
+.TopBody {
+  grid-area: 2 / 1 / 3 / 2;
+  height: 86vh;
+  width: 100vw;
+  display: grid;
+}
+
+.MiddleBody {
+  grid-area: 3 / 1 / 4 / 2;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("./pics/landing-middle-background.jpeg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.35fr 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.landing-top-container {
+  margin-left: 43%;
+  width: 10vw;
+}
+
+#landing-middle-top {
+  grid-area: 1 / 1 / 2 / 2;
+  height: 100%;
+  width: 100%;
+  text-align: left;
+}
+
+.landing-middle-top-h1 {
+  color: white;
+  font-family: "Yellowtail", "cursive";
+  font-size: 50px;
+  margin-top: 5%;
+  margin-left: 5%;
+}
+
+#landing-middle-body {
+  grid-area: 2 / 1 / 3 / 2;
+  height: 100%;
+  width: 100%;
+  display: grid;
+}
+
+.landing-middle-box {
+  height: 100%;
+  width: 70%;
+  background: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 0.85fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.lm-box-left,
+.lm-box-right {
+  height: 100%;
+  width: 100%;
+}
+
+.lm-box-left {
+  grid-area: 1 / 1 / 2 / 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.lm-box-left-1,
+.lm-box-left-2 {
+  height: 100%;
+  width: 100%;
+}
+
+.lm-box-left-1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.lm-box-left-2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.lm-box-right {
+  grid-area: 1 / 2 / 2 / 3;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+}
+
+.lm-box-right-text {
+  margin-right: 5%;
+}
+
+.up-circle {
+  display: flex;
+  height: 60px;
+  width: 60px;
+  border-radius: 100%;
+  background-color: white;
+  place-self: end;
+  margin-right: 3%;
+  margin-bottom: 2%;
+}
+
+.up-circle:hover {
+  cursor: pointer;
+}
+
+.fa-angle-up,
+.fa-angle-down {
+  display: flex;
+  margin-top: 23%;
+  margin-left: 30%;
+  font-size: 35px;
 }
